--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -341,6 +341,10 @@
 
                     p {
                         font-size: 16px;
+                        width: 270px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
                 }
 
