Update styles across components for improved consistency and readability; adjust colors and borders in various SCSS files.
Started dark/light mode process

--- a/src/components/Calls/style.scss
+++ b/src/components/Calls/style.scss
@@ -41,6 +41,7 @@
                     p {
                         font-size: 14px;
                         font-weight: 700;
+                        color: var(--text-black)
                     }
                 }
 
