--- a/src/shared/styles/base/reset.scss
+++ b/src/shared/styles/base/reset.scss
@@ -127,6 +127,6 @@ textarea {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: rgba(86, 86, 86, 0.074);
   border-radius: 6px;
 }
