--- a/src/components/Chats/Components/NewChat/style.scss
+++ b/src/components/Chats/Components/NewChat/style.scss
@@ -6,7 +6,7 @@
     .title-and-input-bar {
         .title-box {
             @include flex-center(row, flex-start, center);
-            border-bottom: 2px solid var(--smooth-light-blue);
+            border-bottom: 2px solid var(--smooth-blue-hover);
             gap: 10px;
             padding-bottom: 15px;
 
@@ -38,7 +38,7 @@
     .user-list-box {
         margin-top: 25px;
         display: flex;
-      
+
 
         &.active {
             display: block;
@@ -88,7 +88,7 @@
                     height: 52px;
                     object-fit: cover;
                     border-radius: 50%;
-                    border:2px solid var(--smooth-blue);
+                    border: 2px solid var(--smooth-blue-hover);
                 }
 
                 // Or
