--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -32,7 +32,7 @@
     padding: 8px;
     border-radius: 10px;
     background-color: var(--blue);
-    color: var(--text-white);
+    color: white;
     font-size: 13px;
     font-weight: 700;
     margin: 16px 0px;
@@ -173,6 +173,7 @@
             text-overflow: ellipsis;
             width: 100%;
             display: block;
+            color: var(--text-black);
         }
 
         span {
