--- a/src/layout/style.scss
+++ b/src/layout/style.scss
@@ -13,12 +13,13 @@
         position: relative;
 
         .outlet-content {
+
             margin-left: 65px;
             @include flex-center(row, flex-start, flex-start);
             height: 100%;
             width: 100%;
             border-radius: 30px 0px 0px 0px;
-            background-color: var(--text-white);
+            background-color: var(--generalBackgroundColor);
         }
 
     }
