--- a/src/shared/styles/base/modal.scss
+++ b/src/shared/styles/base/modal.scss
@@ -33,7 +33,7 @@
 }
 
 .modal-card {
-    background: white;
+
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 20px;
@@ -41,8 +41,8 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     border-radius: 17px;
-    border: 4px solid var(--Light-Soft-Mingle-Blue, #E8EBFD);
-    background: var(--White, #FFF);
+    border: 4px solid var(--smooth-blue-hover);
+    background-color: var(--smooth-white-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     max-height: 600px;
 
