--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -57,7 +57,7 @@
             justify-content: center;
             align-items: center;
             border-radius: 14px;
-            background-color: rgba(255, 255, 255, 0.682);
+            background-color: var(--user-message-box-color);
             backdrop-filter: blur(4px);
             color: var(--user-message-text-color);
             font-size: 14px;
@@ -67,7 +67,7 @@
 
             &.image {
                 padding: 3px 7px;
-                background-color: rgba(207, 207, 207, 0.133);
+                background-color: rgba(227, 227, 227, 0.067);
                 max-width: 380px;
             }
 
