--- a/src/shared/components/SoundRecordModal/style.scss
+++ b/src/shared/components/SoundRecordModal/style.scss
@@ -34,7 +34,7 @@
                 border-radius: 16px;
                 width: 13px;
 
-                background-color: var(--smooth-blue); // Dalga rengi mavi
+                background-color: var(--smooth-blue-hover);
                 height: 50px; // Başlangıç yüksekliği
                 transition: all 0.3s ease-in-out;
 
@@ -70,7 +70,7 @@
                 padding: 5px 10px;
                 border-radius: 7px;
                 background-color: var(--blue);
-                color: var(--text-white);
+                color: white;
                 font-size: 15px;
             }
         }
@@ -97,12 +97,12 @@
 
                 &:first-child {
                     background-color: var(--smooth-red);
-                    color: var(--text-white);
+                    color: white;
                 }
 
                 &:last-child {
                     background-color: var(--blue);
-                    color: var(--text-white);
+                    color: white;
                 }
 
                 &:hover {
@@ -127,7 +127,6 @@ $rhap_progress-color: var(--blue); // İlerleme çubuğu mavi
 
 .audio-player-wrapper {
     box-shadow: none;
-
 }
 
 .audio-player-wrapper .rhap_container {
@@ -135,6 +134,7 @@ $rhap_progress-color: var(--blue); // İlerleme çubuğu mavi
     background-color: var(--smooth-light-blue);
     border-radius: 8px;
     padding: 12px;
+
 }
 
 .rhap_progress-bar {
@@ -173,13 +173,11 @@ $rhap_progress-color: var(--blue); // İlerleme çubuğu mavi
 .rhap_main-controls-button {
     margin: 0 3px;
     color: $rhap_theme-color;
-    /* Diğer butonlar mavi */
     font-size: 35px;
     width: 35px;
     height: 35px;
 }
 
-/* İleri Sarma ve Geri Sarma Butonları */
 .rhap_rewind-button,
 .rhap_forward-button {
     font-size: 26px;
@@ -229,7 +227,6 @@ $rhap_progress-color: var(--blue); // İlerleme çubuğu mavi
     left: 0;
     top: -4px;
     background: $rhap_theme-color;
-    /* Ses kaydırıcısı mavi */
     opacity: 0.9;
     border-radius: 50px;
     box-shadow: rgba($rhap_theme-color, .5) 0 0 3px;
@@ -284,6 +281,16 @@ $rhap_progress-color: var(--blue); // İlerleme çubuğu mavi
 
 }
 
+.rhap_current-time,
+.rhap_total-time {
+    color: $rhap_theme-color;
+}
+
+.rhap_repeat-button {
+    svg {
+        color: $rhap_theme-color;
+    }
+}
 
 @keyframes waveFirst {
 
