Implemented Dark Mode Themes.

--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -149,7 +149,7 @@
                 top: 20px;
                 width: max-content;
                 left: 20px;
-                color: var(--text-white);
+                color: white;
 
                 img {
                     height: 50px;
@@ -195,7 +195,7 @@
 
             &:last-child {
                 background: var(--smooth-red);
-                color: var(--text-white);
+                color: white;
             }
         }
 
