--- a/src/components/Calls/style.scss
+++ b/src/components/Calls/style.scss
@@ -60,7 +60,7 @@
                         border-radius: 15px;
 
                         &:hover {
-                            background-color: var(--smooth-blue);
+                            background-color: var(--smooth-blue-hover);
                         }
                     }
                 }
