--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 45px;
     padding: 0px 14px 0px 14px;
-    background-color: var(--user-message-box-color);
+    background-color: var(--cardHover);
     border-radius: 10px;
 
     .icon-box {
@@ -20,7 +20,7 @@
 
     .search-input {
         width: 100%;
-        color: var(--user-message-text-color);
+        color: var(--text-dark-gray);
         font-size: 13px;
         font-weight: 700;
         height: 100%;
@@ -60,15 +60,15 @@
     }
 
     &:hover {
-        background-color: var(--user-message-box-color);
+        background-color: var(--cardHover);
     }
 
     &.active-chat {
-        background-color: var(--user-message-box-color);
+        background-color: var(--cardHover);
     }
 
     &.active-call {
-        background-color: var(--user-message-box-color);
+        background-color: var(--cardHover);
     }
 
     .image-box {
@@ -193,7 +193,7 @@
         gap: 4px;
 
         span {
-            color: #A7A7A7;
+            color: #828A96;
             font-family: Montserrat;
             font-size: 12px;
             width: 75px;
@@ -213,6 +213,7 @@
 
     .call-status-span {
         margin-top: 2px;
+
 
         .icon {
             font-size: 16px;
