--- a/src/shared/components/MessageInfo/style.scss
+++ b/src/shared/components/MessageInfo/style.scss
@@ -53,6 +53,7 @@
 
                     span {
                         font-size: 15px;
+                        color: var(--text-black);
                     }
                 }
 
