--- a/src/shared/styles/base/mixins.scss
+++ b/src/shared/styles/base/mixins.scss
@@ -1,4 +1,3 @@
-
 @use 'sass:meta';
 
 // ------------------ Media Mixin ------------------
@@ -13,7 +12,7 @@ $breakpoints: (
 );
 
 @mixin screen($breakpoint) {
-    $value: if(meta.type-of($breakpoint) == 'string', map-get($breakpoints, $breakpoint), $breakpoint); // type-of yerine meta.type-of kullanıldı
+    $value: if(meta.type-of($breakpoint)=='string', map-get($breakpoints, $breakpoint), $breakpoint); // type-of yerine meta.type-of kullanıldı
 
     @media (max-width: $value) {
         @content;
@@ -25,12 +24,13 @@ $breakpoints: (
 //!   }
 
 @mixin screenHeight($breakpoint) {
-    $value: if(meta.type-of($breakpoint) == 'string', map-get($breakpoints, $breakpoint), $breakpoint); // type-of yerine meta.type-of kullanıldı
+    $value: if(meta.type-of($breakpoint)=='string', map-get($breakpoints, $breakpoint), $breakpoint); // type-of yerine meta.type-of kullanıldı
 
     @media (max-height: $value) {
         @content;
     }
 }
+
 //!   @include screenHeight(500px) {
 //!     font-size: 14px;
 //!   }
@@ -80,26 +80,24 @@ $breakpoints: (
 
 // ------------------ Button Mixins ------------------
 
-@mixin button(
-  $bg-color: gray,
-  $text-color: #fff,
-  $padding: 10px 20px,
-  $margin: 0,
-  $border: none,
-  $border-radius: 4px,
-  $font-size: 16px,
-  $transition: all 0.3s ease-out,
-  $cursor: pointer
-) {
-  background-color: $bg-color;
-  color: $text-color;
-  padding: $padding;
-  margin: $margin;
-  border: $border;
-  border-radius: $border-radius;
-  font-size: $font-size;
-  cursor: $cursor;
-  transition: $transition;
+@mixin button($bg-color: gray,
+    $text-color: #fff,
+    $padding: 10px 20px,
+    $margin: 0,
+    $border: none,
+    $border-radius: 4px,
+    $font-size: 16px,
+    $transition: all 0.3s ease-out,
+    $cursor: pointer) {
+    background-color: $bg-color;
+    color: $text-color;
+    padding: $padding;
+    margin: $margin;
+    border: $border;
+    border-radius: $border-radius;
+    font-size: $font-size;
+    cursor: $cursor;
+    transition: $transition;
 }
 
 // .special-button {
@@ -118,20 +116,20 @@ $breakpoints: (
 @mixin CustomScroll {
     overflow: scroll;
     overflow-x: hidden;
-  
+
     &::-webkit-scrollbar {
-      width: 6px;
-      cursor: pointer;
+        width: 6px;
+        cursor: pointer;
     }
-  
+
     &::-webkit-scrollbar-thumb {
-      background: linear-gradient(180deg,  #585CE1, #585CE1);
-      border-radius: 6px;
-      cursor: pointer;
+        background: linear-gradient(180deg, #585CE1, #585CE1);
+        border-radius: 6px;
+        cursor: pointer;
     }
-  
+
     &::-webkit-scrollbar-track {
-      background: #f1f1f1;
-      border-radius: 6px;
+        background: #f1f1f1;
+        border-radius: 6px;
     }
-  }
+}
