--- a/src/shared/components/MessageInputBar/style.scss
+++ b/src/shared/components/MessageInputBar/style.scss
@@ -157,10 +157,9 @@
                 bottom: 75px;
                 right: 92px;
                 z-index: 1000;
-                background-color: white;
-                border: 1px solid #ddd;
+                border: 4px solid var(--smooth-blue-hover);
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                border-radius: 8px;
+                border-radius: 28px;
             }
 
             .add-emoji-button {
