--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -1,14 +1,39 @@
 @use "../../shared/styles/main.scss" as *;
 
 Header {
-    @include flex-center(row, flex-start,center);
+    @include flex-center(row, flex-start, center);
     width: 100%;
     height: 55px;
     padding: 8px 10px;
     background-color: var(--smooth-blue);
     gap: 10px;
 
-    img{
+    @include screen(900px) {
+        @include flex-center(row, space-between, center);
+        padding: 8px 14px;
+    }
+
+    img {
         width: 120px;
+    }
+
+    button {
+        @include flex-center(row, center, center);
+        font-size: 30px;
+        padding: 6px;
+        border-radius: 12px;
+        background: transparent;
+        color: var(--blue);
+        transition: all 0.3s ease;
+
+        display: none;
+
+        @include screen(900px) {
+            @include flex-center(row, center, center);
+        }
+
+        &:active {
+            background: var(--text-white);
+        }
     }
 }
