--- a/src/layout/Sidebar/style.scss
+++ b/src/layout/Sidebar/style.scss
@@ -7,8 +7,22 @@
   position: absolute;
   padding: 8px 10px;
   background-color: var(--smooth-blue);
-  transition: width 0.3s ease; 
+  transition: width 0.3s ease;
   z-index: 10;
+
+
+
+  @include screen(900px) {
+    @include flex-center(row, center, center);
+    position: absolute;
+
+    width: 100%;
+    height: 80px;
+    padding: 0;
+    border-radius: 40px 40px 0px 0px;
+    bottom: 0;
+
+  }
 
   &.open {
     width: 170px;
@@ -30,6 +44,14 @@
     width: max-content;
     min-width: 100%;
 
+
+    @include screen(900px) {
+      margin: 0;
+      padding: 10px;
+      width: auto;
+      @include flex-center(row, center);
+    }
+
     &:hover {
       background: var(--text-white);
     }
@@ -38,11 +60,9 @@
       justify-content: flex-start;
     }
 
-    &.active{
+    &.active {
       background: var(--text-white);
     }
-
-
 
     span {
       margin-left: 10px;
@@ -74,9 +94,32 @@
     @include flex-center(column, center, flex-start);
     gap: 25px;
 
+    @include screen(900px) {
+      @include flex-center(row, center, center);
+      width: 100%;
+      height: 100%
+    }
+
     .navigation-buttons {
       @include flex-center(column, center, flex-start);
       gap: 18px;
+
+      @include screen(900px) {
+        @include flex-center(row, center, center);
+        gap: 26px;
+        margin: 0;
+        padding: 0;
+        width: 50px;
+      }
+
+    }
+  }
+
+
+  .bottom-box,
+  #menu-btn {
+    @include screen(900px) {
+      display: none;
     }
   }
 }
