--- a/src/components/Calls/style.scss
+++ b/src/components/Calls/style.scss
@@ -4,21 +4,59 @@
     flex: 1;
     height: 100%;
 
+
     .call-info-bar-box {
         padding: 25px;
 
-        h2 {
-            color: var(--text-black);
-            font-size: 20px;
-            font-weight: 700;
-            line-height: normal;
-            padding: 10px;
+        @include screen(540px) {
+            padding: 15px 5px;
         }
+
+        .title-and-back-box {
+            @include flex-center(row, flex-start, center);
+
+            @include screen(540px) {
+                padding-bottom: 15px;
+                border-bottom: 2px solid var(--smooth-border-color);
+            }
+
+            button {
+                display: none;
+                background-color: transparent;
+                color: var(--blue);
+                font-size: 30px;
+                padding: 5px;
+                border-radius: 50%;
+                @include transition();
+
+                @include screen(900px) {
+                    display: flex;
+                }
+
+                &:active {
+                    background-color: var(--smooth-blue-hover);
+                }
+            }
+
+            h2 {
+                color: var(--text-black);
+                font-size: 20px;
+                font-weight: 700;
+                line-height: normal;
+                padding: 10px;
+            }
+        }
+
+
 
         .details-box {
             margin-top: 15px;
             background-color: var(--smooth-white-color);
             border-radius: 30px;
+
+            @include screen(540px) {
+                background-color: var(--generalBackgroundColor);
+            }
 
             .user-and-call-box {
                 @include flex-center(row, space-between, center);
@@ -26,22 +64,41 @@
                 padding: 15px 27px;
                 border-bottom: 2px solid var(--smooth-border-color);
 
+                @include screen(540px) {
+                    @include flex-center(column, center, center);
+                    gap: 15px;
+                    padding: 15px 0px;
+                }
+
                 .user-info {
                     @include flex-center(row, center, center);
                     gap: 10px;
 
+                    @include screen(540px) {
+                        @include flex-center(column, center, center);
+                    }
 
                     img {
                         width: 60px;
                         height: 60px;
                         border-radius: 50%;
                         object-fit: cover;
+
+                        @include screen(540px) {
+                            width: 95px;
+                            height: 95px;
+                        }
                     }
 
                     p {
                         font-size: 14px;
                         font-weight: 700;
-                        color: var(--text-black)
+                        color: var(--text-black);
+
+                        @include screen(540px) {
+                            font-size: 20px
+                        }
+
                     }
                 }
 
@@ -61,6 +118,17 @@
 
                         &:hover {
                             background-color: var(--smooth-blue-hover);
+                        }
+
+                        span {
+                            font-size: 15px;
+                        }
+
+                        @include screen(540px) {
+                            @include flex-center(column, center, center);
+                            gap: 5px;
+                            width: 100px;
+                            height: 70px;
                         }
                     }
                 }
