--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -3,6 +3,16 @@
 
 //! ----- Dynamic Styles -----
 
+.mobil-menu-title {
+    color: red;
+    width: 100%;
+    padding: 15px 10px;
+    margin-top: -12px;
+    font-size: 24px;
+    color: var(--text-dark-gray);
+}
+
+
 .search-input-box {
     @include flex-center(row, flex-start, center);
     gap: 6px;
@@ -78,6 +88,22 @@
     .date-and-options-box {
         gap: 5px;
         @include flex-center(row, center, center);
+    }
+
+    .date-and-options-box {
+        @include screen(350px) {
+            gap: 0px;
+            @include flex-center(column, center, center);
+
+            // Flex çocuk elemanların sırasını değiştir
+            div:first-child {
+                order: 2;
+            }
+
+            div:nth-child(2) {
+                order: 1;
+            }
+        }
     }
 
     @include screen(900px) {
@@ -231,7 +257,11 @@
             font-family: Montserrat;
             font-size: 12px;
             width: 75px;
-            text-align: center
+            text-align: center;
+
+            @include screen(360px) {
+                width: auto;
+            }
         }
 
         p {
