--- a/src/shared/components/ImageModal/style.scss
+++ b/src/shared/components/ImageModal/style.scss
@@ -3,6 +3,12 @@
 .image-modal-box {
     padding: 10px;
 
+    @include screen(900px) {
+        @include flex-center(row, center, center);
+        flex-direction: column;
+
+    }
+
     .title-box {
         @include flex-center(row, flex-start, center);
         gap: 10px;
@@ -26,6 +32,12 @@
         max-width: 500px;
         max-height: 400px;
         border-radius: 10px;
+
+        @include screen(900px) {
+            width: 100%;
+            height: 100%;
+
+        }
     }
 
     .send-image-btn {
@@ -34,8 +46,16 @@
         padding: 8px;
         background-color: var(--smooth-light-blue);
         color: var(--blue);
-
         border-radius: 7px;
+
+        @include screen(900px) {
+            position: absolute;
+            bottom: 40px;
+            width: 300px;
+            padding: 15px 8px;
+            border-radius: 14px;
+            margin: 0px 60px;
+        }
     }
 
 }
