--- a/src/shared/components/MessageInputBar/style.scss
+++ b/src/shared/components/MessageInputBar/style.scss
@@ -3,8 +3,11 @@
 .message-input-bar {
     width: 100%;
     height: 100px;
-
     @include flex-center(row, center, center);
+
+    @include screen(900px) {
+        height: 100px;
+    }
 
     .input-box {
         @include flex-center(row, space-between, center);
@@ -15,10 +18,18 @@
         width: 95%;
         gap: 10px;
 
+        @include screen(900px) {
+            height: 55px;
+        }
+
         .add-file-box {
             height: 100%;
             width: 50px;
             @include flex-center(row, center, center);
+
+            @include screen(900px) {
+                width: 81px;
+            }
 
             .add-file-button {
                 @include flex-center(row, center, center);
@@ -178,6 +189,10 @@
                 border-radius: 50%;
                 @include transition();
                 padding-left: 2px;
+
+                @include screen(900px) {
+                    margin-right: 5px;
+                }
 
                 &:hover {
                     background-color: var(--hoverBlue);
