--- a/src/components/Chats/Components/NewChat/style.scss
+++ b/src/components/Chats/Components/NewChat/style.scss
@@ -3,6 +3,11 @@
 .new-chat-modal {
     width: 500px;
 
+    @include screen(768px) {
+        width: 100%;
+        height: auto;
+    }
+
     .title-and-input-bar {
         .title-box {
             @include flex-center(row, flex-start, center);
@@ -39,6 +44,10 @@
         margin-top: 25px;
         display: flex;
 
+        @include screen(768px) {
+            width: 100%;
+            height: 100%
+        }
 
         &.active {
             display: block;
@@ -68,6 +77,13 @@
             padding-right: 15px;
             overflow: auto;
             transition: height 0.3s ease;
+
+
+            @include screen(768px) {
+                width: 100%;
+                height: auto;
+            }
+
 
 
             .user-box {
