--- a/src/shared/components/SoundRecordModal/style.scss
+++ b/src/shared/components/SoundRecordModal/style.scss
@@ -3,6 +3,12 @@
 .sound-record-box {
     .sound-record-content {
         width: 400px;
+
+        @include screen(768px) {
+            width: 100%;
+            height: 100%;
+        }
+
         @include flex-center(column, center, center);
 
         .title-box {
