--- a/src/shared/styles/base/modal.scss
+++ b/src/shared/styles/base/modal.scss
@@ -33,25 +33,30 @@
 }
 
 .modal-card {
-
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 20px;
     position: relative;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 600px;
+    max-height: 600px;
     border-radius: 17px;
     border: 4px solid var(--smooth-blue-hover);
     background-color: var(--smooth-white-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    max-height: 600px;
 
     @media (max-width:768px) {
         height: 100%;
         max-height: 100%;
-        overflow: scroll;
+        max-width: 100%;
+        width: 100%;
+        overflow: auto;
+        overflow-x: hidden;
+        border: 0;
         border-radius: 0px;
-        border: 0px;
+        padding: 10px;
+        padding-bottom: 30px;
+        background-color: var(--generalBackgroundColor);
     }
 
 }
@@ -65,7 +70,6 @@
     color: #ffffff;
     border: none;
     background: none;
-    background-color: red;
     width: 33px;
     height: 33px;
     padding: 6px;
@@ -74,5 +78,4 @@
     align-items: center;
     border-radius: 18.5px;
     background: #585CE1;
-
 }
