Enhance responsive styles and layout adjustments in various components for improved mobile experience

--- a/src/components/Chats/Components/NewChat/style.scss
+++ b/src/components/Chats/Components/NewChat/style.scss
@@ -121,6 +121,14 @@
                 .user-info {
                     @include flex-center(column, center, flex-start);
 
+                    p,
+                    span {
+                        width: 100%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
+
                     p {
                         color: var(--text-black);
                         font-size: 15px;
@@ -131,6 +139,7 @@
                     span {
                         color: var(--text-input-gray);
                         font-size: 13px;
+
                     }
                 }
             }
