--- a/src/pages/Sign/style.scss
+++ b/src/pages/Sign/style.scss
@@ -11,11 +11,11 @@
 
 .sign-bar,
 .banner-bar {
-    height: 100vh;
-    padding: 235px 30px 235px 38px;
+    padding: 0px 30px 0px 38px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: auto;
 
     p {
         user-select: none;
@@ -55,6 +55,7 @@
 
 .banner-bar {
     width: 46%;
+
     background-color: var(--blue);
     gap: 18px;
     @include flex-center(column, center, center);
@@ -71,6 +72,7 @@
         @include flex-center(column, center, center);
         width: 80%;
         user-select: none;
+        height: 100%;
 
         @include screen(1200px) {
             gap: 40px;
@@ -310,6 +312,8 @@ form {
     gap: 22px;
     z-index: 2;
     padding: 20px 40px;
+    height: 100%;
+
 
     @include screen(768px) {
         @include flex-center(column, center, center);
