--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -5,6 +5,11 @@
     width: 550px;
     height: 520px;
 
+    @include screen(768px) {
+        width: 100%;
+        height: 100%;
+    }
+
     .title-box {
         width: 100%;
         @include flex-center(row, flex-start, center);
@@ -28,6 +33,12 @@
         flex: 1;
         width: 100%;
 
+        @include screen(359px) {
+            @include flex-center(column, center, center);
+        }
+
+
+
         .sidebar {
             @include flex-center(column, space-between, center);
             width: 200px;
@@ -36,10 +47,31 @@
             gap: 13px;
             border-right: 1px solid var(--smooth-light-blue);
 
+            @include screen(500px) {
+                width: 70px;
+            }
+
+
+            @include screen(359px) {
+                padding: 0px;
+                width: 100%;
+                gap: 5px;
+                @include flex-center(row, center, center);
+                height: 50px;
+                border: 0;
+                margin-top: 10px;
+            }
+
             .menu-list {
                 width: 100%;
                 @include flex-center(column, flex-start, center);
                 gap: 13px;
+
+                @include screen(359px) {
+                    width: 100%;
+                    @include flex-center(row, center, center);
+                    gap: 15px;
+                }
             }
 
             .menu-item {
@@ -52,6 +84,19 @@
                 cursor: pointer;
                 color: var(--text-dark-gray);
                 @include transition();
+
+
+                @include screen(500px) {
+                    @include flex-center(row, center, center);
+                    width: 55px;
+                    height: 50px;
+                }
+
+                @include screen(359px) {
+                    width: 45px;
+                    height: 40px;
+                    padding: 0;
+                }
 
                 &:hover {
                     background-color: var(--smooth-light-blue);
@@ -79,6 +124,13 @@
                     background-color: var(--blue);
                     left: -3px;
 
+                    @include screen(359px) {
+                        left: auto;
+                        bottom: -2px;
+                        width: 23px;
+                        height: 5px;
+                    }
+
                 }
 
                 svg {
@@ -89,6 +141,11 @@
                 p {
                     font-size: 15px;
                     font-weight: 700;
+
+
+                    @include screen(500px) {
+                        display: none;
+                    }
                 }
             }
 
@@ -116,6 +173,12 @@
             flex: 1;
             height: 100%;
             padding: 15px 0px 0px 15px;
+            width: 20px;
+
+            @include screen(359px) {
+                width: 100%;
+                @include flex-center(column, flex-start, center);
+            }
 
 
             h3 {
@@ -189,6 +252,8 @@
             }
 
             .theme-box {
+                width: 100%;
+
                 .theme-select {
                     margin-bottom: 20px;
 
@@ -213,6 +278,11 @@
                         background-position: calc(100% - 13px) center;
                         cursor: pointer;
                         background-size: 16px;
+
+                        @include screen(500px) {
+                            max-width: 100%;
+                            width: 100%;
+                        }
                     }
                 }
 
@@ -271,6 +341,11 @@
                 @include flex-center(column, flex-start, flex-start);
                 gap: 18px;
                 color: var(--text-black);
+
+                @include screen(768px) {
+
+                    height: 100%;
+                }
 
                 h3 {
                     margin-bottom: 0;
@@ -437,6 +512,14 @@
 
             .change-password-box {
                 width: 100%;
+
+                @include screen(768px) {
+                    width: 80%;
+                }
+
+                @include screen(600px) {
+                    width: 100%;
+                }
 
                 .inputs-box {
                     margin-top: 20px;
