--- a/src/shared/components/MinglePreLoader/style.scss
+++ b/src/shared/components/MinglePreLoader/style.scss
@@ -1,4 +1,5 @@
 // Data Loader
+@use "../../styles/main.scss" as *;
 
 .loading-container {
     position: fixed;
@@ -6,15 +7,12 @@
     height: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    @include flex-center(column, center, center);
 
-    .loading-image {
-        width: 150px; // Resim boyutu
-        height: auto;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    img {
+        @include screen(768px) {
+            width: 200px;
+        }
     }
 
     .progress-bar {
@@ -26,6 +24,10 @@
         border-radius: 50px;
         overflow: hidden;
         position: relative;
+
+        @include screen(768px) {
+            width: 200px;
+        }
 
         .progress {
             width: 0;
@@ -40,11 +42,11 @@
 // Animasyon
 @keyframes progressAnimation {
     0% {
-        width: 10%; 
+        width: 10%;
     }
 
     50% {
-        width: 60%; 
+        width: 60%;
     }
 
     100% {
