--- a/src/shared/styles/base/modal.scss
+++ b/src/shared/styles/base/modal.scss
@@ -42,7 +42,7 @@
     max-height: 600px;
     border-radius: 17px;
     border: 4px solid var(--smooth-blue-hover);
-    background-color: var(--smooth-white-color);
+    background-color: var(--generalBackgroundColor);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
     @media (max-width:768px) {
@@ -54,7 +54,7 @@
         overflow-x: hidden;
         border: 0;
         border-radius: 0px;
-        padding: 10px;
+        padding: 15px 8px;
         padding-bottom: 30px;
         background-color: var(--generalBackgroundColor);
     }
