--- a/src/shared/components/MessageInputBar/style.scss
+++ b/src/shared/components/MessageInputBar/style.scss
@@ -166,11 +166,25 @@
             .emoji-picker {
                 position: absolute;
                 bottom: 75px;
-                right: 92px;
+                right: 0px;
                 z-index: 1000;
                 border: 4px solid var(--smooth-blue-hover);
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
                 border-radius: 28px;
+
+                @include screen(500px) {
+                    @include flex-center(row, center, center);
+                    right: 0px;
+
+                    position: fixed;
+                    left: 0;
+
+                    scale: 0.9;
+                    border: 0;
+                    border-radius: 0;
+                    box-shadow: "none";
+
+                }
             }
 
             .add-emoji-button {
