--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -80,6 +80,14 @@
         height: 100%;
         @include flex-center(row, center, center);
         position: relative;
+        flex-grow: 1;
+        min-height: 20%;
+
+        @include screen(768px) {
+            @include flex-center(column, center, space-between);
+            width: 100%;
+            flex: 1; // Ekran daraldığında da genişliğini ve esnekliğini korur.
+        }
 
         &.only-voice-call {
             height: 0%;
@@ -90,10 +98,16 @@
             width: 65%;
             border-radius: 40px;
             z-index: 3;
-
             opacity: 0;
             /* Başlangıçta görünmez */
             animation: fadeIn 1.5s ease-in-out forwards;
+            border: 2px solid rgb(17, 34, 17);
+
+            @include screen(768px) {
+                height: 40%;
+                border: none;
+            }
+
 
             video {
                 height: 100%;
@@ -101,6 +115,7 @@
                 border-radius: 15px;
                 border: 3px solid var(--smooth-light-blue);
                 transition: all 0.7s ease;
+                margin-top: 20px;
             }
 
             &.remote-connected {
@@ -111,12 +126,23 @@
                 margin-bottom: 28px;
                 margin-right: 14px;
 
+                @include screen(768px) {
+                    @include flex-center(row, center, center);
+                    margin: 0;
+                }
+
 
                 video {
                     height: 130px;
                     width: max-content;
                     position: absolute;
                     bottom: 7px;
+
+                    @include screen(768px) {
+                        position: initial;
+                        bottom: 0px;
+                        height: 80%;
+                    }
                 }
             }
         }
@@ -128,6 +154,11 @@
             height: max-content;
             @include flex-center(row, center, center);
 
+            @include screen(768px) {
+                position: initial;
+                height: 60%
+            }
+
             video {
                 width: 100%; // Genişliği sabitle
                 max-width: 100%; // Taşmayı engelle
@@ -135,6 +166,12 @@
                 border-radius: 20px;
                 border: 4px solid var(--smooth-light-blue);
                 object-fit: cover; // Video içeriğini kesmeden kapsa
+
+                @include screen(768px) {
+                    position: initial;
+                    height: 90%;
+                    width: auto;
+                }
             }
 
             .user-info {
@@ -151,10 +188,15 @@
                 left: 20px;
                 color: white;
 
+                @include screen(768px) {
+                    display: none;
+                }
+
                 img {
                     height: 50px;
                     width: 50px;
                     border-radius: 50%;
+                    object-fit: cover;
                 }
 
                 p {
@@ -181,6 +223,10 @@
 
         @include screen(768px) {
             width: 330px;
+        }
+
+        @include screen(342px) {
+            width: 300px;
         }
 
 
