--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -99,15 +99,8 @@
             border-radius: 40px;
             z-index: 3;
             opacity: 0;
-            /* Başlangıçta görünmez */
             animation: fadeIn 1.5s ease-in-out forwards;
-            border: 2px solid rgb(17, 34, 17);
-
-            @include screen(768px) {
-                height: 40%;
-                border: none;
-            }
-
+            height: auto;
 
             video {
                 height: 100%;
@@ -115,7 +108,7 @@
                 border-radius: 15px;
                 border: 3px solid var(--smooth-light-blue);
                 transition: all 0.7s ease;
-                margin-top: 20px;
+
             }
 
             &.remote-connected {
@@ -126,11 +119,16 @@
                 margin-bottom: 28px;
                 margin-right: 14px;
 
+
+                @include screen(768px) {
+                    height: 40%;
+                    border: none;
+                }
+
                 @include screen(768px) {
                     @include flex-center(row, center, center);
                     margin: 0;
                 }
-
 
                 video {
                     height: 130px;
